# bankfraud

./: .gitignore  README.md  data_inspection.ipynb  download_data.py  hyperparam_output.txt  main.py  pyproject.toml  requirements.txt
models/: lr_model.pkl  xgb_model.pkl
src/: __init__.py  age_fairness.py  analyze_data.py  binning.py  constants.py  data_inspection.ipynb  download_data.py  eval.py  evaluation.py  fairness.py  load_data.py  main.py  main_nati.py  main_robert.py  models.py  rq4_analysis.py  training.py  utils.py
