[project]
name = "bankfraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "scikit-learn>=1.8.0",
    "scipy-stubs>=1.17.0.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]
